--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<properties>
+  <sonar.organization>mm2002-pn</sonar.organization>
+</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
